# equalizer

./: .gitignore  CMakeLists.txt  conanfile.py
libraries/kfr/lib/cmake/kfr/: KFRConfig-release.cmake  KFRConfig.cmake  KFRConfigVersion.cmake
sources/: main.cpp
